# platform.core.api.geofence-manager

./: AUTHORS  CMakeLists.txt  capi-geofence-manager.pc.in
doc/: geofence-manager-doc.h
include/: geofence_manager.h  geofence_type.h
packaging/: capi-geofence-manager.spec
src/: geofence_manager.c  geofence_settings.h
src/manager/: geofence-data.h  geofence-ielement.c  geofence-ielement.h  geofence-internal.c  geofence-internal.h  geofence-log.c  geofence-log.h  geofence-marshal.list  geofence-param.c  geofence-param.h  geofence-privacy.c  geofence-privacy.h  geofence-type-private.h  geofence.c  geofence.h  module-internal.c  module-internal.h
src/manager/include/: geofence_data_type.h  geofence_module.h
src/module/: geofence-module.h  module-internal.c  module-internal.h
test/: CMakeLists.txt  capi-geofence-manager-test.manifest  capi-geofence-manager-test.rule  geofence_test.c
test/Test-App-Sample/: .cproject  .project  CMakeLists.txt  com.samsung.testgeo-sample.manifest  com.samsung.testgeo-sample.rule  com.samsung.testgeo-sample.xml
test/Test-App-Sample/UIMgr/: .MapsGeocodeView.cpp.swp  CMakeLists.txt  MapsAddPlace.cpp  MapsAddPlace.h  MapsApp.cpp  MapsApp.h  MapsAppData.cpp  MapsAppData.h  MapsDebug.h  MapsGeopointParamsView.cpp  MapsGeopointParamsView.h  MapsRemovePlace.cpp  MapsRemovePlace.h  MapsScenario1View.cpp  MapsScenario1View.h  MapsUpdatePlace.cpp  MapsUpdatePlace.h  main.cpp
test/Test-App-Sample/UIMgr/WinMgr/: WApp.cpp  WControl.cpp  WDebugInternal.h  WDefineInternal.h  WNaviframe.cpp  WPageView.cpp  WUg.cpp  WUgWindow.cpp  WView.cpp  WWindow.cpp
test/Test-App-Sample/UIMgr/WinMgr/include/: WApp.h  WControl.h  WDebugBase.h  WDefine.h  WNaviframe.h  WPageView.h  WUg.h  WUgWindow.h  WUiObject.h  WView.h  WWindow.h
test/Test-App-Sample/UIMgr/res/: CMakeLists.txt  homescreen.edc  images.edc  layouts.edc
test/Test-App-Sample/UIMgr/res/data/: color_table.xml  font_table.xml
